Added translation junk

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -6,7 +6,7 @@ permalink: /about/roadmap/index.html
       <section class="page-intro section">
           <div class="row">
               <div class="col">
-                  <h1>Roadmap</h1>
+                  <h1>{% t roadmap.heading %}</h1>
               </div>
           </div>
       </section>
@@ -22,28 +22,28 @@ permalink: /about/roadmap/index.html
                   <div class="col">
                           <ul class="timeline">
                             <li class="event done">
-                              <h3>Deterministic Znodes</h3>
+                              <h3>{% t roadmap.znodes %}</h3>
                             </li>
                             <li class="event done">
-                              <h3>Long Lived Masternode Quorums</h3>   
+                              <h3>{% t roadmap.mnodesq %}</h3>   
                             </li>
                             <li class="event current">
-                              <h3>RAP Addresses - PR Review</h3>   
+                              <h3>{% t roadmap.rap %}</h3>   
                             </li>
                             <li class="event">
-                              <h3>Lelantus</h3>
+                              <h3>{% t global.lelantus %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Chain-locks</h3>
+                              <h3>{% t roadmap.chainlocks %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Rebrand</h3>
+                              <h3>{% t roadmap.rebrand %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Elysium with Lelantus</h3>
+                              <h3>{% t roadmap.elysium %}</h3>
                             </li>
                             <li class="event">
-                              <h3>DeFi Integrations</h3>
+                              <h3>{% t roadmap.defi %}</h3>
                             </li>
                           </ul>
                   </div>
@@ -62,22 +62,22 @@ permalink: /about/roadmap/index.html
                   <div class="col">
                           <ul class="timeline">
                             <li class="event">
-                              <h3>Instant Send</h3>
+                              <h3>{% t roadmap.instant %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Aura with direct anonymous payments</h3>   
+                              <h3>{% t roadmap.aura %}</h3>   
                             </li>
                             <li class="event">
-                              <h3>PoW change</h3>   
+                              <h3>{% t roadmap.pow %}</h3>   
                             </li>
                             <li class="event">
-                              <h3>Mobile wallet and SDK with Lelantus/Aura support</h3>
+                              <h3>{% t roadmap.mobile %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Fast sync clients</h3>
+                              <h3>{% t roadmap.fast %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Chain swap</h3>
+                              <h3>{% t roadmap.chainswap %}p</h3>
                             </li>
                           </ul>
                   </div>
@@ -89,27 +89,27 @@ permalink: /about/roadmap/index.html
             <div class="container">
               <div class="row">
                   <div class="col">
-                        <h2>Research</h2>
+                        <h2>{% t roadmap.research %}</h2>
                   </div>
               </div>
               <div class="row">
                   <div class="col">
                           <ul class="timeline">
                             <li class="event">
-                              <h3>Cross chain bridges</h3>
+                              <h3>{% t roadmap.bridges %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Mixnets</h3>
+                              <h3>{% t roadmap.mixnets %}</h3>
                             </li>
                             <li class="event">
-                              <h3>Hierarchical one-out-of-many proofs for Lelantus</h3>
+                              <h3>{% t roadmap.proofs %}</h3>
                             </li>
                           </ul>
                   </div>
               </div>
               <div class="row road-more">
                   <div class="col">
-                      <a class="btn-secondary" href="https://zcoin.io/zcoin-technical-roadmap-2020-and-beyond/" target="_blank">Learn more</a>
+                      <a class="btn-secondary" href="https://zcoin.io/zcoin-technical-roadmap-2020-and-beyond/" target="_blank">{% t roadmap.learnhmore %}</a>
                   </div>
               </div>
           </div>
