--- a/about/team/index.html
+++ b/about/team/index.html
@@ -6,7 +6,7 @@ permalink: /about/team/index.html
       <section class="page-intro section">
           <div class="row">
               <div class="col">
-                  <h1>Team</h1>
+                  <h1>{% t team.heading %}</h1>
               </div>
           </div>
       </section>
@@ -15,7 +15,7 @@ permalink: /about/team/index.html
               <div class="container">
                   <div class="row">
                       <div class="col head">
-                            <h2>core team</h2>
+                            <h2>{% t team.coreteam %}</h2>
                       </div>
                   </div>
               </div>
@@ -195,7 +195,7 @@ permalink: /about/team/index.html
              <div class="container">
                   <div class="row">
                       <div class="col head">
-                            <h2>research</h2>
+                            <h2>{% t team.research %}</h2>
                       </div>
                   </div>
               </div>
@@ -231,7 +231,7 @@ permalink: /about/team/index.html
              <div class="container">
                   <div class="row">
                       <div class="col head">
-                            <h2>ambassadors</h2>
+                            <h2>{% t team.ambassadors %}</h2>
                       </div>
                   </div>
               </div>
@@ -327,7 +327,7 @@ permalink: /about/team/index.html
              <div class="container">
                   <div class="row">
                       <div class="col head">
-                            <h2>community managers</h2>
+                            <h2>{% t team.community %}</h2>
                       </div>
                   </div>
               </div>
