--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -6,7 +6,7 @@ permalink: /get-firo/buy-firo/index.html
       <section class="page-intro section">
           <div class="row">
               <div class="col">
-                  <h1>Buy Firo</h1>
+                  <h1>{% t buyfiro.heading %}</h1>
               </div>
           </div>
       </section>
@@ -14,9 +14,9 @@ permalink: /get-firo/buy-firo/index.html
       <section class="faq-nav">
           <div class="container">
               <ul class="row">
-                  <li><a href="#fiat">Firo / Fiat</a></li>
-                  <li><a href="#crypto">Firo / Crypto</a></li>
-                  <li><a href="#coinswap">Coin-Swapping</a></li>
+                  <li><a href="#fiat">{% t buyfiro.ff %}</a></li>
+                  <li><a href="#crypto">{% t buyfiro.fc %}</a></li>
+                  <li><a href="#coinswap">{% t buyfiro.cs %}</a></li>
               </ul>
           </div>
       </section>
@@ -24,7 +24,7 @@ permalink: /get-firo/buy-firo/index.html
       <section class="container tech-section" id="fiat">
           <div class="row">
               <div class="col">
-                  <p class="intro-text">One of the ways to get Firo is to acquire it on one of the exchanges. Below you will find a list of exchanges and coin-swapping services that support Firo.</p>
+                  <p class="intro-text">{% t buyfiro.heading2 %}</p>
               </div>
           </div>
       </section>
@@ -33,7 +33,7 @@ permalink: /get-firo/buy-firo/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>exchanges with <span>firo / fiat</span> pairing</h2>
+                        <h2>{% t buyfiro.exchangeswith %} <span>{% t buyfiro.ffhead1 %}</span> {% t buyfiro.pairing %}</h2>
                   </div>
               </div>
               <div class="row">
@@ -69,7 +69,7 @@ permalink: /get-firo/buy-firo/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>exchanges with <span>firo / crypto</span> pairing</h2>
+                        <h2>{% t buyfiro.exchangeswith %} <span>{% t buyfiro.fchead1 %}</span> {% t buyfiro.pairing %}</h2>
                   </div>
               </div>
               <div class="row">
@@ -159,7 +159,7 @@ permalink: /get-firo/buy-firo/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>coin-swapping services</h2>
+                        <h2>{% t buyfiro.csservice %}</h2>
                   </div>
               </div>
               <div class="row">
