--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -6,7 +6,7 @@ permalink: /get-firo/download/index.html
       <section class="page-intro section">
           <div class="row">
               <div class="col">
-                  <h1>Download a wallet</h1>
+                  <h1>{% t download.heading %}</h1>
               </div>
           </div>
       </section>
@@ -15,52 +15,52 @@ permalink: /get-firo/download/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>official desktop wallets</h2>
+                        <h2>{% t download.official %}</h2>
                   </div>
               </div>
               <div class="row focus">
                     <div class="col">
-                        <p>Back up your wallet prior to updating</p>
+                        <p>{% t download.backup %}</p>
                     </div>
                     <div class="col">
-                        <p>Verify hashes using <a href="" target="_blank">this public key</a></p>
+                        <p>{% t download.verify %} <a href="" target="_blank">{% t download.verify1 %}</a></p>
                     </div>
                     <div class="col">
-                        <p>Use this official <a href="" target="_blank">wallet installation and usage guide</a></p>
+                        <p>{% t download.guide %} <a href="" target="_blank">{% t download.guide1 %}</a></p>
                     </div>
               </div>
               <div class="row desk-wallets">
                     <div class="col">
-                        <p class="tagline">The high security option</p>
+                        <p class="tagline">{% t download.option1 %}</p>
                         <div class="inner">
-                            <h3>QT Wallet</h3>
+                            <h3>{% t download.qt %}</h3>
                             <p class="wversion">v0.14.0.5</p>
-                            <p class="changelog"><a href="https://github.com/firoorg/firo/releases/latest" target="_blank">View changelog</a></p>
+                            <p class="changelog"><a href="https://github.com/firoorg/firo/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-win64-setup.exe">Download QT for Windows</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-win64-setup.exe">{% t download.downloadqtw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh1">
-                                    <label class="tab-label" for="wh1">Show SHA256 hashes for Windows</label>
+                                    <label class="tab-label" for="wh1">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
                                       <p>d7c6d8657613326100da391a8dd47bded6df00aa66ab20412c88a5ed67d051ff</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-macos.dmg">Download QT for MacOS</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-macos.dmg">{% t download.downloadqtm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh1">
-                                    <label class="tab-label" for="mh1">Show SHA256 hashes for MacOS</label>
+                                    <label class="tab-label" for="mh1">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
                                       <p>45800d5b7686e86ab5e42114d74a79b589e7ff8630aebcd1866150adca6eed06</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-linux64.tar.gz">Download QT for Linux</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-linux64.tar.gz">{% t download.downloadqtl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh1">
-                                    <label class="tab-label" for="lh1">Show SHA256 hashes for Linux</label>
+                                    <label class="tab-label" for="lh1">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
                                       <p>9127e89178a4d4d84b299e90cc4f024ca3bae3283233ef63f4c097d7a8cd6bba</p>
                                     </div>
@@ -74,36 +74,36 @@ permalink: /get-firo/download/index.html
                     </div>
                     
                     <div class="col">
-                        <p class="tagline">The user friendly option</p>
+                        <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
-                            <h3>Electron</h3>
+                            <h3>{% t download.electron %}</h3>
                             <p class="wversion">1.1.3</p>
-                            <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">View changelog</a></p>
+                            <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.exe">Download Electron for Windows</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
-                                    <label class="tab-label" for="wh3">Show SHA256 hashes for Windows</label>
+                                    <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
                                       <p>bd4ed82f0eea8d113eb2891586e70ab7c2f6046d4a6dcb0427e2f837e77892fd</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.dmg">Download Electron for MacOS</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
-                                    <label class="tab-label" for="mh2">Show SHA256 hashes for MacOS</label>
+                                    <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
                                       <p>fd9477089fdc51458ef3917c090cab910750679efaaa5e5f158f955cdecdfecf</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.AppImage">Download Electron for Linux</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
-                                    <label class="tab-label" for="lh2">Show SHA256 hashes for Linux</label>
+                                    <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
                                       <p>79db57ec023f580e5105b227c92e1c2906dc400b00d3ee7e70c854f24671f85f</p>
                                     </div>
@@ -117,36 +117,36 @@ permalink: /get-firo/download/index.html
                     </div>
                     
                     <div class="col">
-                        <p class="tagline">The fast, lightweight option</p>
+                        <p class="tagline">{% t download.option3 %}</p>
                         <div class="inner">
-                            <h3>Electrum</h3>
+                            <h3>{% t download.electrum %}</h3>
                             <p class="wversion">3.3.8</p>
-                            <p class="changelog"><a href="https://github.com/firoorg/electrum-xzc/releases/latest" target="_blank">View changelog</a></p>
+                            <p class="changelog"><a href="https://github.com/firoorg/electrum-xzc/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-xzc-3.3.8a7-setup.exe">Download Electrum for Windows</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-xzc-3.3.8a7-setup.exe">{% t download.downloadelectrumw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh5">
-                                    <label class="tab-label" for="wh5">Show SHA256 hashes for Windows</label>
+                                    <label class="tab-label" for="wh5">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
                                       <p>62be7e1ee86a667f2e625addabd218619728792e547d681c61b7ac8685ffc174</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-3.3.8a7.dmg">Download Electrum for MacOS</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-3.3.8a7.dmg">{% t download.downloadelectrumm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
-                                    <label class="tab-label" for="mh3">Show SHA256 hashes for MacOS</label>
+                                    <label class="tab-label" for="mh3">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
                                       <p>a858e27e576e90276af74b21c8d1cfac03ae988e2be817c33e9b427f19fe6ce4</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum_xzc-3.3.8a7-x86_64.AppImage">Download Electrum for Linux</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum_xzc-3.3.8a7-x86_64.AppImage">{% t download.downloadelectruml %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh3">
-                                    <label class="tab-label" for="lh3">Show SHA256 hashes for Linux</label>
+                                    <label class="tab-label" for="lh3">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
                                       <p>b6bcfd501e516352dd6902f9b3bf4ddd7b6f15c2e99345bbea9f44a441ef6255</p>
                                     </div>
@@ -166,7 +166,7 @@ permalink: /get-firo/download/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>wallets</h2>
+                        <h2>{% t download.wallets %}</h2>
                   </div>
               </div>
               <div class="row mob-wallets">
