--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ permalink: /index.html
                   <img src="img/img_firo-mobile-top2.svg"/>
               </div>
               <div class="intro-info col">
-                  <h1>Financial Privacy Renewed.</h1>
-                  <p>Firo is a digital currency with a focus on setting privacy standards.</p>
-                  <a class="btn-primary" href="#getfiro">Get Firo</a>
-                  <a class="btn-secondary" href="/about/faq/">Learn more</a>
+                  <h1>{% t home.heading %}</h1>
+                  <p>{% t home.heading2 %}</p>
+                  <a class="btn-primary" href="#getfiro">{% t home.cta1 %}</a>
+                  <a class="btn-secondary" href="/about/faq/">{% t home.cta2 %}</a>
               </div>
               <div class="intro-info col imgi">
                   <img src="img/img_firo-mobile-bot2.svg"/>
@@ -30,21 +30,21 @@ permalink: /index.html
                   <img src="img/privacy.svg" alt="Blockchain illustration"/>
              </div>
              <div class="col col-info">
-                  <h3>Privacy</h3>
-                  <p>Firo, formerly Zcoin, has been the gold standard of trustless, on-chain privacy since 2016.</p>
+                  <h3>{% t home.privacy %}</h3>
+                  <p>{% t home.privacy1 %}</p>
                   <div class="row block-facts">
                       <div class="col">
                          <img src="img/site-icons/icon_anonymous.svg" alt="" />
                          <div>
-                              <h4>anonymity set</h4>
+                              <h4>{% t home.privacy2 %}</h4>
                               <p>2<sup>16</sup></p>
                           </div>
                       </div>
                       <div class="col">
                           <img src="img/site-icons/icon_setup.svg" alt="" />
                           <div>
-                              <h4>trustless setup</h4>
-                              <p>yes</p>
+                              <h4>{% t home.privacy3 %}</h4>
+                              <p>{% t global.yeth %}</p>
                           </div>
                       </div>
                   </div>
@@ -52,27 +52,27 @@ permalink: /index.html
           </div>
           <div class="row privacy">
              <div class="col col-info">
-                  <h3>Blockchain</h3>
-                  <p>Firo’s incentive infrastructure gives it the industry-leading practical anonymity set.</p>
+                  <h3>{% t home.blockchain %}</h3>
+                  <p>{% t home.blockchain1 %}</p>
                   <div class="row block-facts">
                       <div class="col">
                           <img src="img/site-icons/icon_coins.svg" alt="" />
                           <div>
-                              <h4>total supply</h4>
+                              <h4>{% t home.blockchain2 %}</h4>
                               <p>21.4 mil</p>
                           </div>
                       </div>
                       <div class="col">
                           <img src="img/site-icons/icon_axe.svg" alt="" />
                           <div>
-                               <h4>proof of work</h4>
+                               <h4>{% t home.blockchain3 %}</h4>
                                <p>MTP</p>
                            </div>
                       </div>
                       <div class="col">
                           <img src="img/site-icons/icon_node.svg" alt="" />
                           <div>
-                              <h4>master nodes</h4>
+                              <h4>{% t home.blockchain4 %}</h4>
                               <p>5000+</p>
                           </div>
                       </div>
@@ -87,8 +87,8 @@ permalink: /index.html
                   <img src="img/rnd.svg" alt="Blockchain illustration"/>
              </div>
              <div class="col col-info">
-                  <h3>Research and development</h3>
-                  <p>Firo is one of the few that actually contributes both independent research and development to blockchain privacy and decentralization technologies.</p>
+                  <h3>{% t home.randd %}</h3>
+                  <p>{% t home.randd1 %}</p>
                   <div class="row block-facts">
                       <div class="col">
                          <img src="img/site-icons/icon_sigma.svg" alt="" />
@@ -103,7 +103,7 @@ permalink: /index.html
                           <h4>Dandelion</h4>
                       </div>
                   </div>
-                  <a class="btn-secondary" href="/about/tech/">Learn more</a>
+                  <a class="btn-secondary" href="/about/tech/">{% t home.cta1 %}</a>
              </div>
           </div>
           </div>
@@ -113,28 +113,28 @@ permalink: /index.html
          <div class="container">
           <div class="row">
              <div class="col">
-                  <h2>get firo</h2>
-                  <p>Push the frontiers of digital privacy. Join the Firo ecosystem today.</p>
+                  <h2>{% t home.getfiro %}</h2>
+                  <p>{% t home.getfiro1 %}</p>
              </div>
           </div>
           <div class="row btns">
              <a class="col" href="/get-firo/download/">
                   <img src="img/wallet.svg" alt="" />
-                  <h3>Get a wallet</h3>
+                  <h3>{% t home.getfiro2 %}</h3>
              </a>
              <a class="col" href="/get-firo/buy-firo/">
                   <img src="img/buy-firo.svg" alt="" />
-                  <h3>Buy Firo</h3>
+                  <h3>{% t home.getfiro3 %}</h3>
              </a>
              
              <a class="col" href="/guide/masternode-setup.html">
                   <img src="img/earn-firo.svg" alt="" />
-                  <h3>Earn Firo</h3>
+                  <h3>{% t home.getfiro4 %}</h3>
              </a>
              
              <a class="col" href="/guide/how-to-mine.html">
                   <img src="img/mine-firo.svg" alt="" />
-                  <h3>Start mining</h3>
+                  <h3>{% t home.getfiro5 %}</h3>
              </a>
           </div>
           </div>
