Updated site with odds and ends - Removed Impressum - Added Lelantus audits to the tech page - Removed BitZ - Added privacy policy

--- a/about/tech/index.html
+++ b/about/tech/index.html
@@ -52,6 +52,19 @@ permalink: /about/tech/index.html
                               </div>
                           </div>
                       </div>
+                      <div class="row">
+                          <div class="col">
+                              <h3>{% t tech.audits %}</h3>
+                              <div class="row papers">
+                                  <div class="col">
+                                      <a href="https://github.com/trailofbits/publications/blob/master/reviews/zcoin-lelantus-summary.pdf" alt="" class="paper-title">Lelantus cryptographic library audit by Trail of Bits</a>
+                                  </div>
+                                  <div class="col">
+                                      <a href="/about/tech/papers/lelantus-cryptography-audit-abdk.pdf" alt="" class="paper-title">Lelantus cryptography audit by ABDK Consulting</a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
                   </div>
               </div>
           </div>
