Update to 14.0.2 and 3.3.8a8

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -34,35 +34,35 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option1 %}</p>
                         <div class="inner">
                             <h3>{% t download.qt %}</h3>
-                            <p class="wversion">v0.14.0.5</p>
+                            <p class="wversion">v0.14.1.2</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-win64-setup.exe">{% t download.downloadqtw %}</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.1.2/firo-0.14.1.2-win64-setup.exe t download.downloadqtw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh1">
                                     <label class="tab-label" for="wh1">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>d7c6d8657613326100da391a8dd47bded6df00aa66ab20412c88a5ed67d051ff</p>
+                                      <p>ded3022d33febb7dcb6923d6fe895be81ad34a09c79caceac7ba6ca261779902</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-macos.dmg">{% t download.downloadqtm %}</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.1.2/firo-0.14.1.2-macos.dmg">{% t download.downloadqtm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh1">
                                     <label class="tab-label" for="mh1">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>45800d5b7686e86ab5e42114d74a79b589e7ff8630aebcd1866150adca6eed06</p>
+                                      <p>4f844693644836692be0b65a69f033f555d2a83c387c1a39ebc15eeb3b1ce0fb</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-linux64.tar.gz">{% t download.downloadqtl %}</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.1.2/firo-0.14.1.2-linux64.tar.gz">{% t download.downloadqtl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh1">
                                     <label class="tab-label" for="lh1">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>9127e89178a4d4d84b299e90cc4f024ca3bae3283233ef63f4c097d7a8cd6bba</p>
+                                      <p>f2f3e92d891cfcea3b9232bdaf104fd1c7b6d21997a4e2c1297c7e8130c2e3e3</p>
                                     </div>
                               </div>
                             </div>
@@ -120,10 +120,10 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option3 %}</p>
                         <div class="inner">
                             <h3>{% t download.electrum %}</h3>
-                            <p class="wversion">3.3.8</p>
+                            <p class="wversion">3.3.8a8</p>
                             <p class="changelog"><a href="https://github.com/firoorg/electrum-xzc/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-xzc-3.3.8a7-setup.exe">{% t download.downloadelectrumw %}</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a8/electrum-xzc-3.3.8a8-setup.exe">{% t download.downloadelectrumw %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="wh5">
@@ -134,7 +134,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-3.3.8a7.dmg">{% t download.downloadelectrumm %}</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a8/electrum-3.3.8a8.dmg">{% t download.downloadelectrumm %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
@@ -145,7 +145,7 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum_xzc-3.3.8a7-x86_64.AppImage">{% t download.downloadelectruml %}</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a8/electrum_xzc-3.3.8a8-x86_64.AppImage">{% t download.downloadelectruml %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh3">
                                     <label class="tab-label" for="lh3">{% t download.hasheslinux %}</label>
