--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -37,7 +37,7 @@ permalink: /get-firo/download/index.html
                             <p class="wversion">v0.14.1.2</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.1.2/firo-0.14.1.2-win64-setup.exe t download.downloadqtw %}</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.1.2/firo-0.14.1.2-win64-setup.exe">{% t download.downloadqtw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh1">
                                     <label class="tab-label" for="wh1">{% t download.hasheswindows %}</label>
