Ad xpoolx to mining guide

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ permalink: /index.html
                   <h3>{% t home.getfiro4 %}</h3>
              </a>
              
-             <a class="col" href="/guide/how-to-mine.html">
+             <a class="col" href="/guide/how-to-mine-firo.html">
                   <img src="img/mine-firo.svg" alt="" />
                   <h3>{% t home.getfiro5 %}</h3>
              </a>
