--- a/about/team/index.html
+++ b/about/team/index.html
@@ -148,14 +148,14 @@ permalink: /about/team/index.html
                           <div class="col">
                               <h4>Anwar P.</h4>
                               <p class="title">Senior Support</p>
-                              <p class="bio">Anwar is a qualified electrical and electronics engineer with several years of experience of technical support at an IT company. He handles support queries, documentation and also assists the Project Steward with day to day matters.</p>
+                              <p class="bio">Anwar majored in electrical and electronics engineering, with several years of experience of technical support at an IT company. He handles support queries, documentation, developer support and also assists the Project Steward with day to day matters.</p>
                           </div>
                       </div>
                   </div>
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="" alt=""/>
+                              <img src="/img/team/ajay.jpg" alt=""/>
                           </div>
                           <div class="col">
                               <h4>Ajaydono</h4>
