Added gateio and stealthex

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -113,7 +113,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.finexbox.com/" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.gate.io/" target="_blank"><img src="/img/crypto-exchanges/PLACEHOLDER.svg" alt=""/></a>
+                      <a href="https://www.gate.io/" target="_blank"><img src="/img/crypto-exchanges/gateio_h_en.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://hitbtc.com/" target="_blank"><img src="/img/crypto-exchanges/hitbtc.svg" alt=""/></a>
@@ -171,6 +171,9 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
                   <div class="col">
                       <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt=""/></a>
+                  </div>
+                  <div class="col">
+                      <a href="https://stealthex.io/" target="_blank"><img src="/img/coin-swapping/stealthex.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://swaplab.cc/" target="_blank"><img src="/img/coin-swapping/swaplab.svg" alt=""/></a>
