Fix branding link

--- a/branding/index.html
+++ b/branding/index.html
@@ -21,7 +21,7 @@ permalink: /branding/index.html
               <div class="row">
                   <div class="col">
                         <h3>Logo & Icon</h3>
-                        <p>We want our logo to always look clear and legible. Please follow these simple recommendations regarding using the logo. For more details, please <a href="/firo-brand-guidelines.pdf">read our brand guidelines (PDF)</a>.</p>
+                        <p>We want our logo to always look clear and legible. Please follow these simple recommendations regarding using the logo. For more details, please <a href="/branding/firo-brand-guidelines.pdf">read our brand guidelines (PDF)</a>.</p>
                         <div class="row logo-brand">
                               <div class="col og">
                                   <div class="img-wrap"><img src="/img/firo-logo.svg" alt="Firo logo one white background"/></div>
