Update URL; Firo in privacy policy

--- a/community/index.html
+++ b/community/index.html
@@ -50,7 +50,7 @@ permalink: /community/index.html
                         <img src="/img/site-icons/com_facebook.svg" alt=""/>
                         <p>Facebook</p>
                   </a>
-                  <a href="https://www.reddit.com/r/zcoin/" target="_blank" class="col">
+                  <a href="https://www.reddit.com/r/FiroProject/" target="_blank" class="col">
                         <img src="/img/site-icons/com_reddit.svg" alt=""/>
                         <p>Reddit</p>
                   </a>
