--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -13,5 +13,5 @@ author: Updated November 29, 2020
 
 <h2>What We Use the Data For</h2>
 
-<p>Server log data is used to provide statistics on the website and help us to improve the content and the information flow. This data is also used to analyze errors and diagnose requests to dead links. A portion of the server logs are used to gather statistics on Monero downloads in order to help us better understand our users' needs.
+<p>Server log data is used to provide statistics on the website and help us to improve the content and the information flow. This data is also used to analyze errors and diagnose requests to dead links. A portion of the server logs are used to gather statistics on Firo downloads in order to help us better understand our users' needs.
 </p>
