Set rebrand to completed

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -27,6 +27,9 @@ permalink: /about/roadmap/index.html
                             <li class="event done">
                               <h3>{% t roadmap.mnodesq %}</h3>   
                             </li>
+                            <li class="event done">
+                              <h3>{% t roadmap.rebrand %}</h3>
+                            </li>
                             <li class="event current">
                               <h3>{% t roadmap.rap %}</h3>   
                             </li>
@@ -35,9 +38,6 @@ permalink: /about/roadmap/index.html
                             </li>
                             <li class="event">
                               <h3>{% t roadmap.chainlocks %}</h3>
-                            </li>
-                            <li class="event">
-                              <h3>{% t roadmap.rebrand %}</h3>
                             </li>
                             <li class="event">
                               <h3>{% t roadmap.elysium %}</h3>
