Add stFIRO with placeholder image

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -151,7 +151,22 @@ permalink: /get-firo/buy-firo/index.html
               </div>
           </div>
       </section>
-      
+
+      <section class="tech-section ex-list" id="liquidstaking">
+            <div class="container">
+              <div class="row">
+                  <div class="col head">
+                        <h2>liquid staking</h2>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                      <a href="https://st.firo.org" target="_blank"><img src="https://via.placeholder.com/230x100" alt=""/></a>
+                  </div>
+              </div>
+          </div>
+      </section>
+
       <section class="tech-section ex-list" id="coinswap">
             <div class="container">
               <div class="row">
