Many site adjustments - Added a guide layout with full-width text - Changed the current guides to guide layout from post - Fixed a weird svg with imperfections - Added translation for liquid staking and the picture for its only entry - Fixed ordered lists not showing correctly - Removed Guides from blog home page - CSS fixes and improvements for all of the above

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Home
+title: Home | Firo - Financial Privacy Renewed
 permalink: /index.html
 ---
               <section id="intro">
