--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -156,12 +156,12 @@ permalink: /get-firo/buy-firo/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>liquid staking</h2>
+                        <h2>{% t buyfiro.liquidstaking %}</h2>
                   </div>
               </div>
               <div class="row">
                   <div class="col">
-                      <a href="https://st.firo.org" target="_blank"><img src="https://via.placeholder.com/230x100" alt=""/></a>
+                      <a href="https://st.firo.org" target="_blank"><img src="/img/liquid-staking/stFIRO.svg" alt=""/></a>
                   </div>
               </div>
           </div>
