Add sourceforge links

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -68,7 +68,7 @@ permalink: /get-firo/download/index.html
                             </div>
                             <div class="source">
                                 <a href="https://github.com/firoorg/firo" target="_blank"><i class="icon-github"></i></a>
-                                <a href="https://sourceforge.net/projects/zcoin/" target="_blank"><i class="icon-sourceforge"></i></a>
+                                <a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a>
                             </div>
                         </div>
                     </div>
@@ -111,7 +111,7 @@ permalink: /get-firo/download/index.html
                             </div>
                             <div class="source">
                                 <a href="https://github.com/firoorg/firo-client" target="_blank"><i class="icon-github"></i></a>
-                                <a href="" target="_blank"><i class="icon-sourceforge"></i></a>
+                                <a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a>
                             </div>
                     </div>
                     </div>
@@ -156,7 +156,7 @@ permalink: /get-firo/download/index.html
                             </div>
                             <div class="source">
                                 <a href="https://github.com/firoorg/electrum-xzc" target="_blank"><i class="icon-github"></i></a>
-                                <a href="" target="_blank"><i class="icon-sourceforge"></i></a>
+                                <a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a>
                             </div>
                     </div>
                     </div>
