Changed Znodes header to Masternodes

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -286,7 +286,7 @@ permalink: /about/faq/index.html
          <div class="container">
               <div class="row">
                   <div class="col">
-                        <h2>Znodes</h2>
+                        <h2>Masternodes</h2>
                         <div class="tabs">
 						<div class="tab">
                             <input type="checkbox" id="q20">
