Update remaining "znode" to masternode

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -344,14 +344,14 @@ permalink: /about/faq/index.html
                             <input type="checkbox" id="q25">
                             <label class="tab-label" for="q25"><h4>What do I need to host a Firo masternode?</h4></label>
                             <div class="tab-content">
-                                <p>A Znode requires</p>
+                                <p>A masternode requires</p>
                                 <ul>
                                     <li>1000 FIRO (refundable at any time)</li>
                                     <li>A computer or VPS with a fixed IP address</li>
                                     <li>1 GB of RAM</li>
                                     <li>Enough disk space to store the blockchain (50gb is recommended for the moment)</li>
                                 </ul>
-                                <p>Typically a VPS of this specification costs around USD5 to run a month per node and you can head on to Amazon AWS, Google Cloud, Microsoft Azure, Leaseweb, <a href="https://www.vultr.com/?ref=6847471">Vultr,</a> <a href="https://www.linode.com/?r=af3000184137a5eedea8fcfd03fd48f36b8471a3">Linode</a>, or <a href="https://m.do.co/c/f89c8c2af033">DigitalOcean</a> to obtain a basic VPS when Znodes are launched. There will also be Znode providers who can assist you to set this up and/or maintain it for a small fee.</p>
+                                <p>Typically a VPS of this specification costs around USD5 to run a month per node and you can head on to Amazon AWS, Google Cloud, Microsoft Azure, Leaseweb, <a href="https://www.vultr.com/?ref=6847471">Vultr,</a> <a href="https://www.linode.com/?r=af3000184137a5eedea8fcfd03fd48f36b8471a3">Linode</a>, or <a href="https://m.do.co/c/f89c8c2af033">DigitalOcean</a> to obtain a basic VPS when masternodes are launched. There will also be masternodes providers who can assist you to set this up and/or maintain it for a small fee.</p>
                             </div>
                           </div>
                           <div class="tab">
