Add global base title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Home | Firo - Financial Privacy Renewed
+title: Home
 permalink: /index.html
 ---
               <section id="intro">
