Added guides page Put guides on guides page Put guides page on nav bar

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -72,7 +72,7 @@ permalink: /about/faq/index.html
                             <input type="checkbox" id="q4">
                             <label class="tab-label" for="q4"><h4>Where can I buy Firo?</h4></label>
                             <div class="tab-content">
-                              <p>You can see all the exchanges and/or swap services Firo is available <a href="https://firo.org/get-firo/buy-firo/">here</> or on <a href="https://www.coingecko.com/en/coins/firo" target="_blank">Coingecko</a></p>
+                              <p>You can see all the exchanges and/or swap services Firo is available <a href="https://firo.org/get-firo/buy-firo/">here</a> or on <a href="https://www.coingecko.com/en/coins/firo" target="_blank">Coingecko</a></p>
                             </div>
                           </div>
                           <div class="tab">
