--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -30,21 +30,6 @@ permalink: /about/roadmap/index.html
                             <li class="event done">
                               <h3>{% t roadmap.rebrand %}</h3>
                             </li>
-                            <li class="event current">
-                              <h3>{% t roadmap.rap %}</h3>   
-                            </li>
-                            <li class="event">
-                              <h3>{% t global.lelantus %}</h3>
-                            </li>
-                            <li class="event">
-                              <h3>{% t roadmap.chainlocks %}</h3>
-                            </li>
-                            <li class="event">
-                              <h3>{% t roadmap.elysium %}</h3>
-                            </li>
-                            <li class="event">
-                              <h3>{% t roadmap.defi %}</h3>
-                            </li>
                           </ul>
                   </div>
               </div>
@@ -61,23 +46,41 @@ permalink: /about/roadmap/index.html
               <div class="row">
                   <div class="col">
                           <ul class="timeline">
-                            <li class="event">
+                            <li class="event current">
+                              <h3>{% t roadmap.lelantus %}</h3> 
+                              <p>{% t roadmap.lelantusdesc %}</p>  
+                            </li>
+                            <li class="event current">
+                              <h3>{% t roadmap.chainlocks %}</h3>
+                              <p>{% t roadmap.chainlocksdesc %}</p>
+                            </li>
+                            <li class="event current">
+                              <h3>{% t roadmap.rap %}</h3>
+                              <p>{% t roadmap.rapdesc %}</p>
+                            </li>
+                            <li class="event current">
                               <h3>{% t roadmap.instant %}</h3>
+                              <p>{% t roadmap.instantdesc %}</p>
                             </li>
-                            <li class="event">
-                              <h3>{% t roadmap.aura %}</h3>   
+                            <li class="event current">
+                              <h3>{% t roadmap.elysium %}</h3>
+                              <p>{% t roadmap.elysiumdesc %}</p>
                             </li>
-                            <li class="event">
-                              <h3>{% t roadmap.pow %}</h3>   
+                            <li class="event current">
+                              <h3>{% t roadmap.lelantus2 %}</h3>
+                              <p>{% t roadmap.lelantus2desc %}</p>
                             </li>
-                            <li class="event">
+                            <li class="event current">
                               <h3>{% t roadmap.mobile %}</h3>
+                              <p>{% t roadmap.mobiledesc %}</p>
                             </li>
                             <li class="event">
-                              <h3>{% t roadmap.fast %}</h3>
+                              <h3>{% t roadmap.renfiro %}</h3>   
+                              <p>{% t roadmap.renfirodesc %}</p>
                             </li>
                             <li class="event">
-                              <h3>{% t roadmap.chainswap %}p</h3>
+                              <h3>{% t roadmap.progpow %}</h3>   
+                              <p>{% t roadmap.progpowdesc %}</p>
                             </li>
                           </ul>
                   </div>
@@ -96,20 +99,22 @@ permalink: /about/roadmap/index.html
                   <div class="col">
                           <ul class="timeline">
                             <li class="event">
-                              <h3>{% t roadmap.bridges %}</h3>
+                              <h3>{% t roadmap.aura %}</h3>
+                              <p>{% t roadmap.auradesc %}</p>
+                            </li>
+                            <li class="event">
+                              <h3>{% t roadmap.syncclients %}</h3>
+                              <p>{% t roadmap.syncclientsdesc %}</p>
                             </li>
                             <li class="event">
                               <h3>{% t roadmap.mixnets %}</h3>
+                              <p>{% t roadmap.mixnetsdesc %}</p>
                             </li>
                             <li class="event">
-                              <h3>{% t roadmap.proofs %}</h3>
+                              <h3>{% t roadmap.bridges %}</h3>
+                              <p>{% t roadmap.bridgesdesc %}</p>
                             </li>
                           </ul>
-                  </div>
-              </div>
-              <div class="row road-more">
-                  <div class="col">
-                      <a class="btn-secondary" href="https://zcoin.io/zcoin-technical-roadmap-2020-and-beyond/" target="_blank">{% t roadmap.learnhmore %}</a>
                   </div>
               </div>
           </div>
