--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -15,7 +15,7 @@ permalink: /about/roadmap/index.html
             <div class="container">
               <div class="row">
                   <div class="col">
-                        <h2>2020</h2>
+                        <h2>Development</h2>
                   </div>
               </div>
               <div class="row">
@@ -30,23 +30,7 @@ permalink: /about/roadmap/index.html
                             <li class="event done">
                               <h3>{% t roadmap.rebrand %}</h3>
                             </li>
-                          </ul>
-                  </div>
-              </div>
-          </div>
-      </section>
-      
-      <section class="faq-section">
-            <div class="container">
-              <div class="row">
-                  <div class="col">
-                        <h2>2021</h2>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col">
-                          <ul class="timeline">
-                            <li class="event current">
+                            <li class="event done">
                               <h3>{% t roadmap.lelantus %}</h3> 
                               <p>{% t roadmap.lelantusdesc %}</p>  
                             </li>
@@ -86,7 +70,7 @@ permalink: /about/roadmap/index.html
                   </div>
               </div>
           </div>
-      </section>  
+      </section>
       
       <section class="faq-section">
             <div class="container">
