--- a/guide/index.html
+++ b/guide/index.html
@@ -29,9 +29,10 @@ permalink: /guide/index.html
                   <div class="col">
                         <h2>Wallet</h2>
                         <ul class="guides-list">
+							<li><a href="/guide/firo-migration-guide.html">Migrating your wallet from Zcoin to Firo</a></li>
                             <li><a href="/guide/backing-up-firo-wallet-with-mnemonic-seed-phrase.html">How to backup your Firo wallet with a mnemonic seed phrase</a></li>
                             <li><a href="/guide/reindex-wallet.html">Reindexing your Firo wallet</a></li>
-                            <li><a href="">How to Use Trezor With Firo (formerly Zcoin)</a></li>
+                            <li><a href="/guide/using-trezor-with-firo.html">How to Use Trezor With Firo</a></li>
                         </ul>
                   </div>
               </div>
