Add Coinomi desktop

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -249,6 +249,11 @@ permalink: /get-firo/download/index.html
                                           <i class="icon-apple"></i>
                                       </a>
                                  </li>
+                                 <li class="col">
+                                     <a href="https://www.coinomi.com/en/downloads/" target="_blank">
+                                          <i class="icon-desktop"></i>
+                                      </a>
+                                 </li>
                               </ul>
                           </div>
                           <div class="col">
