Set chainlocks to completed

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -34,7 +34,7 @@ permalink: /about/roadmap/index.html
                               <h3>{% t roadmap.lelantus %}</h3> 
                               <p>{% t roadmap.lelantusdesc %}</p>  
                             </li>
-                            <li class="event current">
+                            <li class="event done">
                               <h3>{% t roadmap.chainlocks %}</h3>
                               <p>{% t roadmap.chainlocksdesc %}</p>
                             </li>
