--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -77,30 +77,30 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option2 %}</p>
                         <div class="inner">
                             <h3>{% t download.electron %}</h3>
-                            <p class="wversion">1.1.3</p>
+                            <p class="wversion">2.0.0 Beta3</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta.3/Firo.Client.Setup.2.0.0-rc3.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>bd4ed82f0eea8d113eb2891586e70ab7c2f6046d4a6dcb0427e2f837e77892fd</p>
+                                      <p>C7DD3EE192388422677C91FD228BADD316BC3905764196B58F1EC9F939316839</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.dmg">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta.3/Firo.Client-2.0.0-rc3.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>fd9477089fdc51458ef3917c090cab910750679efaaa5e5f158f955cdecdfecf</p>
+                                      <p>EE1B604310D2BD14935A42C450C880FB6605E95AD6D89B5132D0738D2BB8E9B6</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.0.0-beta.3/">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
