Initial Chinese localization

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -15,7 +15,7 @@ permalink: /about/roadmap/index.html
             <div class="container">
               <div class="row">
                   <div class="col">
-                        <h2>Development</h2>
+                        <h2>{% t roadmap.development %}</h2>
                   </div>
               </div>
               <div class="row">
