Update link to Binance

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -83,7 +83,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.biki.com/trade/XZC_USDT" target="_blank"><img src="/img/crypto-exchanges/biki.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.binance.com/en/trade/XZC_BTC" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt=""/></a>
+                      <a href="https://www.binance.com/en/trade/FIRO_BTC" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.bitcoin.com/" target="_blank"><img src="/img/crypto-exchanges/bitcoin_com.svg" alt=""/></a>
