--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -41,11 +41,8 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://dovewallet.com/" target="_blank"><img src="/img/fiat-exchanges/dovewallet.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://indodax.com/market/XZCIDR" target="_blank"><img src="/img/fiat-exchanges/indodax.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://www.litebit.eu/en/buy/zcoin" target="_blank"><img src="/img/fiat-exchanges/litebit.svg" alt=""/></a>
-                  </div>
+                      <a href="https://indodax.com/market/FIROIDR" target="_blank"><img src="/img/fiat-exchanges/indodax.svg" alt=""/></a>
+                  </div>                
                   <div class="col">
                       <a href="https://oodlebit.com/Coin/Zcoin" target="_blank"><img src="/img/fiat-exchanges/oodlebit.svg" alt=""/></a>
                   </div>
@@ -53,7 +50,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.ovex.io/trading/xzczar" target="_blank"><img src="/img/fiat-exchanges/ovex.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://satang.pro/exchange/market/XZC-THB" target="_blank"><img src="/img/fiat-exchanges/santang.svg" alt=""/></a>
+                      <a href="https://satangcorp.com/exchange/en/trade/XZC_THB" target="_blank"><img src="/img/fiat-exchanges/santang.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://sistemkoin.com/" target="_blank"><img src="/img/fiat-exchanges/sistemkoin.svg" alt=""/></a>
@@ -80,7 +77,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://atomars.com/" target="_blank"><img src="/img/crypto-exchanges/atomars.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.biki.com/trade/XZC_USDT" target="_blank"><img src="/img/crypto-exchanges/biki.svg" alt=""/></a>
+                      <a href="https://www.biki.com/en_US/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/biki.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.binance.com/en/trade/FIRO_BTC" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt=""/></a>
@@ -140,7 +137,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://vinex.network/market/BTC_XZC" target="_blank"><img src="/img/crypto-exchanges/vinex.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://wazirx.com/exchange/XZC-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt=""/></a>
+                      <a href="https://wazirx.com/exchange/FIRO-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.wbf.info/trade/XZC_USDT" target="_blank"><img src="/img/crypto-exchanges/wbf_exchange.svg" alt=""/></a>
