--- a/about/team/index.html
+++ b/about/team/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Team
+title: titles.team
 permalink: /about/team/index.html
 ---
       <section class="page-intro section">
