--- a/branding/index.html
+++ b/branding/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Branding
+title: titles.branding
 permalink: /branding/index.html
 ---
          <section class="page-intro section">
