--- a/community/index.html
+++ b/community/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Community
+title: titles.community
 permalink: /community/index.html
 ---
       <section class="page-intro section">
