--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Roadmap
+title: titles.roadmap
 permalink: /about/roadmap/index.html
 ---
       <section class="page-intro section">
