--- a/about/tech/index.html
+++ b/about/tech/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Tech
+title: titles.tech
 permalink: /about/tech/index.html
 ---
       <section class="page-intro section">
