--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Buy Firo
+title: titles.buyfiro
 permalink: /get-firo/buy-firo/index.html
 ---   
       <section class="page-intro section">
