--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Download
+title: titles.download
 permalink: /get-firo/download/index.html
 ---
       <section class="page-intro section">
