--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ permalink: /index.html
                   <h1>{% t home.heading %}</h1>
                   <p>{% t home.heading2 %}</p>
                   <a class="btn-primary" href="#getfiro">{% t home.cta1 %}</a>
-                  <a class="btn-secondary" href="/about/faq/">{% t home.cta2 %}</a>
+                  <a class="btn-secondary" href="{{ site.baseurl }}/about/faq/">{% t home.cta2 %}</a>
               </div>
               <div class="intro-info col imgi">
                   <img src="/img/img_firo-mobile-bot2.svg"/>
@@ -103,7 +103,7 @@ permalink: /index.html
                           <h4>Dandelion</h4>
                       </div>
                   </div>
-                  <a class="btn-secondary" href="/about/tech/">{% t home.cta2 %}</a>
+                  <a class="btn-secondary" href="{{ site.baseurl }}/about/tech/">{% t home.cta2 %}</a>
              </div>
           </div>
           </div>
@@ -118,21 +118,21 @@ permalink: /index.html
              </div>
           </div>
           <div class="row btns">
-             <a class="col" href="/get-firo/download/">
+             <a class="col" href="{{ site.baseurl }}/get-firo/download/">
                   <img src="/img/wallet.svg" alt="" />
                   <h3>{% t home.getfiro2 %}</h3>
              </a>
-             <a class="col" href="/get-firo/buy-firo/">
+             <a class="col" href="{{ site.baseurl }}/get-firo/buy-firo/">
                   <img src="/img/buy-firo.svg" alt="" />
                   <h3>{% t home.getfiro3 %}</h3>
              </a>
              
-             <a class="col" href="/guide/masternode-setup.html">
+             <a class="col" href="{{ site.baseurl }}/guide/masternode-setup.html">
                   <img src="/img/earn-firo.svg" alt="" />
                   <h3>{% t home.getfiro4 %}</h3>
              </a>
              
-             <a class="col" href="/guide/how-to-mine-firo.html">
+             <a class="col" href="{{ site.baseurl }}/guide/how-to-mine-firo.html">
                   <img src="/img/mine-firo.svg" alt="" />
                   <h3>{% t home.getfiro5 %}</h3>
              </a>
