Update Discord invite link

--- a/community/index.html
+++ b/community/index.html
@@ -14,7 +14,7 @@ permalink: /community/index.html
       <section class="alt-section">
             <div class="container">
               <div class="row main-channels">
-                  <a href="https://discord.com/invite/4FjnQ2q" target="_blank" class="col">
+                  <a href="https://discord.com/invite/TGZPRbRT3Y" target="_blank" class="col">
                         <img src="/img/site-icons/com_discord.svg" alt=""/>
                         <p>Discord</p>
                   </a>
