Update to Electrum 4.0.9.2

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -120,37 +120,37 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">{% t download.option3 %}</p>
                         <div class="inner">
                             <h3>{% t download.electrum %}</h3>
-                            <p class="wversion">3.3.8a9</p>
+                            <p class="wversion">4.0.9.2</p>
                             <p class="changelog"><a href="https://github.com/firoorg/electrum-firo-archived/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/electrum-firo-archived/releases/download/3.3.8a9/electrum-xzc-3.3.8a9-setup.exe">{% t download.downloadelectrumw %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.0.9.2/Firo-Electrum-4.0.9.2-setup-win64.exe">{% t download.downloadelectrumw %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="wh5">
                                     <label class="tab-label" for="wh5">{% t download.hasheswindows %}</label>
                                     <div class="tab-content">
-                                      <p>dbf0f324185b4c7e5ee42000740dac7c211b8301bcaa09a361b15a73aab8602c</p>
+                                      <p>8ea517a65d6832368164d7614d254f8c1996939d6dda87f1e6a7f3fd6eb95f45</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/electrum-firo-archived/releases/download/3.3.8a9/electrum-3.3.8a9.dmg">{% t download.downloadelectrumm %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.0.9.2/Firo-Electrum-4.0.9.2-macosx.dmg">{% t download.downloadelectrumm %}</a>
 
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
                                     <label class="tab-label" for="mh3">{% t download.hashesmac %}</label>
                                     <div class="tab-content">
-                                      <p>f5d4f50bfb8bd911114f1020d1efe811363c1e9e8673377ff2d44a3ea6e1bb5d</p>
+                                      <p>14e4dc95ab3af4aa9b5b751b5653dad99a1dab7a4c4b7a276f4d36bb25003a1c</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/electrum-firo-archived/releases/download/3.3.8a9/electrum_xzc-3.3.8a9-x86_64.AppImage">{% t download.downloadelectruml %}</a>
+                                <a href="https://github.com/firoorg/electrum-firo/releases/download/4.0.9.2/Firo-Electrum-4.0.9.2-x86_64.AppImage">{% t download.downloadelectruml %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh3">
                                     <label class="tab-label" for="lh3">{% t download.hasheslinux %}</label>
                                     <div class="tab-content">
-                                      <p>8f82ad482fcbebe5f139ee38e8944ba2f6721d2696770df7006239fdc13f916d</p>
+                                      <p>ae6c5ba4ead5f07c5f93051c5ae9ceba6278774f2405b6f085ccdcd00ed834a7</p>
                                     </div>
                               </div>
                             </div>
